@@ -36,7 +36,6 @@ require( [
 
              Easel.Ticker.addListener( model );
              Easel.Ticker.addListener( stage );
-             Easel.Ticker.addListener( stage.frameRateDisplay );
              Easel.Ticker.setFPS( 60 );
              Easel.Touch.enable( stage, false, false );
          } );
