@@ -1,3 +1,4 @@
+1/30/13 rename FrameRateDisplay to FrameRateNode
 1/30/13 add shaker node
 1/30/13 add model types for rgba color, rectangle, solute, solute colorscheme
 1/30/13 implement important bits of Java's MessageFormat for i18n using patterns
